# GP-Symbolic-Regression

./: .gitignore  LICENSE  README.md  compile.sh
cli/: CMakeLists.txt  config.txt  default_config.txt  generate_data.zsh
cli/src/: main.cpp
lib/: CMakeLists.txt
lib/src/: .SymbolicRegressionSolver.cpp.swp  .SymbolicRegressionSolver.hpp.swp  Assert.hpp  Config.hpp.inl  Function.cpp  Function.hpp  GeneticOperations.cpp  GeneticOperations.hpp  Point.hpp  SymbolicRegressionSolver.cpp  SymbolicRegressionSolver.hpp  Types.hpp  random_utils.hpp  string_utils.hpp  string_view.hpp
lib/src/lang/: Lexer.cpp  Node.hpp  Parser.cpp  Parser.hpp  Variable.hpp
src/: Assert.hpp  Function.cpp  Function.hpp  GeneticOperations.cpp  GeneticOperations.hpp  Node.hpp  Operator.cpp  Parser.cpp  Point.hpp  Solution.hpp  SymbolicRegressionSolver.cpp  SymbolicRegressionSolver.hpp  main.cpp  util.hpp
src/lang/: Lexer.cpp  Lexer.hpp  Node.hpp  Operator.cpp  Operator.hpp  Parser.cpp  Parser.hpp  Token.hpp
viewer/: ConfigDialog.cpp  ConfigDialog.hpp  ConfigDialog.ui  ErrorDialog.hpp  GeneratePointDialog.cpp  GeneratePointDialog.hpp  GeneratePointDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PointEditDialog.cpp  PointEditDialog.hpp  PointEditDialog.ui  PointListEditDialog.cpp  PointListEditDialog.hpp  PointListEditDialog.ui  RunThread.cpp  RunThread.hpp  Validator.hpp  viewer.pro
